--- a/QuickApp/ClientApp/src/app/components/about/about.component.html
+++ b/QuickApp/ClientApp/src/app/components/about/about.component.html
@@ -4,37 +4,40 @@
     </header>
 
     <div class="reduced-font" [@fadeInOut]>
-        <h4>Welcome to QuickApp</h4>
-        <p>This application template provides a quick and convenient way to create ASP.NET Core 5.0 / Angular 11 applications</p>
+        <h4>Benvindo ao QuickApp Desenv - Cooperchip</h4>
+        <p>Este modelo de aplicativo fornece uma maneira rápida e conveniente de criar um ASP.NET Core 5.0 / Angular 11 applications</p>
 
-    	<h6>NOTE: To hire developers for your project please go to <a href="https://www.ebenmonney.com/devlink" target="_blank">DevLink</a> or send a mail to <a target="_blank" href="mailto:devlink@ebenmonney.com">devlink@ebenmonney.com</a> for more info. </h6>
+        <h6>
+          NOTA: Para contratar desenvolvedores para o seu projeto, vá para <a href="https://www.ebenmonney.com/devlink" target="_blank">DevLink</a> ou envie um Email para <a target="_blank" href="mailto:devlink@ebenmonney.com">devlink@ebenmonney.com</a> para maiores informações.
+        </h6>
 
-        <h5>Technologies</h5>
+        <h5>Tecnologias</h5>
         <ul>
-            <li>Template pages with <a href="https://angular.io" target="_blank" rel="nofollow">Angular 11</a> and <a href="https://www.typescriptlang.org" target="_blank" rel="nofollow">TypeScript</a></li>
-            <li>RESTful API Backend using <a href="https://docs.microsoft.com/en-us/aspnet/core" target="_blank" rel="nofollow">ASP.NET Core 5.0</a> MVC Web API</li>
-            <li>Database using <a href="https://docs.microsoft.com/en-us/ef/core" target="_blank" rel="nofollow">Entity Framework Core</a></li>
-            <li>Authentication based on <a href="http://docs.identityserver.io/en/release" target="_blank" rel="nofollow">IdentityServer4</a> and <a href="https://docs.microsoft.com/en-us/aspnet/core/security/authentication/identity-configuration?tabs=aspnetcore2x" target="_blank" rel="nofollow">ASP.NET Core Identity</a></li>
-            <li>API Documentation using <a href="https://swagger.io" target="_blank" rel="nofollow">Swagger</a></li>
-            <li>Client-side built on <a href="https://cli.angular.io" target="_blank" rel="nofollow">Angular CLI</a></li>
-            <li>Theming using <a href="https://getbootstrap.com" target="_blank" rel="nofollow">Bootstrap 4</a> with <a href="https://bootswatch.com" target="_blank" rel="nofollow">Bootswatch</a></li>
+            <li>Template com <a href="https://angular.io" target="_blank" rel="nofollow">Angular 11</a> e <a href="https://www.typescriptlang.org" target="_blank" rel="nofollow">TypeScript</a></li>
+            <li>RESTful API Backend usando <a href="https://docs.microsoft.com/en-us/aspnet/core" target="_blank" rel="nofollow">ASP.NET Core 5.0</a> MVC Web API</li>
+            <li>Banco de Dados usando <a href="https://docs.microsoft.com/en-us/ef/core" target="_blank" rel="nofollow">Entity Framework Core</a></li>
+            <li>Autenticação baseda em <a href="http://docs.identityserver.io/en/release" target="_blank" rel="nofollow">IdentityServer4</a> e <a href="https://docs.microsoft.com/en-us/aspnet/core/security/authentication/identity-configuration?tabs=aspnetcore2x"
+                    target="_blank" rel="nofollow">ASP.NET Core Identity</a></li>
+            <li>Documentação da API usando <a href="https://swagger.io" target="_blank" rel="nofollow">Swagger</a></li>
+            <li>Contrução do Client-side no <a href="https://cli.angular.io" target="_blank" rel="nofollow">Angular CLI</a></li>
+            <li>Tema usando <a href="https://getbootstrap.com" target="_blank" rel="nofollow">Bootstrap 4</a> e <a href="https://bootswatch.com" target="_blank" rel="nofollow">Bootswatch</a></li>
         </ul>
 
         <div style="position: relative" class="bg-light bg-features">
             <h5>Features</h5>
             <ul>
-                <li>A complete backend and frontend project structure to build on, with login, user and permission-based role management integrated</li>
-                <li>Clean and simple Angular/ASP.NET Core code to serve as a guide</li>
-                <li>Data Access Layer built with the Repository and Unit of Work Pattern</li>
+              <li>Uma estrutura de projeto de back-end e front-end completa, com login, usuário e gerenciamento de funções baseada em permissão integrada</li>
+              <li>Código Angular / ASP.NET Core Clean e simples para servir de guia</li>
+              <li>Camada de Acesso a Dados construída com o Padrão Repositório e Unit of Work</li>
                 <li>Code First Database</li>
-                <li>A RESTful API Design</li>
-                <li>Dialog and Notification Services</li>
-                <li>Configuration Page and Configuration Service</li>
-                <li>Integrated Internationaliztion</li>
-                <li>Theming with SASS</li>
-                <li>Ready-to-use email API</li>
-                <li>Handling Access and Refresh Tokens with WebStorage (Bearer authentication) - No Cookies</li>
-                <li>CRUD APIs</li>
+                <li>Uma Design RESTful API </li>
+                <li>Serviços de Dialog e Notification</li>
+                <li>Página de Configuração e Serviço de Configuração</li>
+                <li>Internacionalização Integrada</li>
+                <li>Thema com SASS</li>
+                <li>Preparado para usar API de email</li>
+                <li>Manipulador de Access e Refresh Tokens com WebStorage (Bearer authentication) - sem Cookies</li>
+                <li>CRUD na APIs</li>
                 <li>etc.</li>
             </ul>
             <i class="fa fa-bolt text-white logo"></i>
